# scilla-compiler

./: .gitignore  .travis.yml  Brewfile  Dockerfile  Dockerfile.slim  INSTALL.md  Makefile  README.md  scilla-compiler.opam  scilla.opam
.github/: CODEOWNERS
.github/workflows/: workflow.yml
scripts/: build_install_llvm.sh  build_llvm.sh  gas_verify_expr.sh
src/astlowering/: AnnotationExplicitizer.ml  ClosureConversion.ml  ClosuredSyntax.ml  CodegenUtils.ml  DCE.ml  EvalLib.ml  ExplicitAnnotationSyntax.ml  FlatPatternSyntax.ml  FlattenPatterns.ml  LoweringUtils.ml  LoweringUtils.mli  MonomorphicSyntax.ml  Monomorphize.ml  ScopingRename.ml  UncurriedSyntax.ml  Uncurry.ml  dune
src/codegen/: AnnotationExplicitizer.ml  ClosureConversion.ml  ClosuredSyntax.ml  CodegenUtils.ml  CodegenUtils.mli  DCE.ml  ExplicitAnnotationSyntax.ml  FlatPatternSyntax.ml  FlattenPatterns.ml  GenLlvm.ml  GenSrtlDecls.ml  MonomorphicSyntax.ml  Monomorphize.ml  ScopingRename.ml  TypeLLConv.ml  TypeLLConv.mli  UncurriedSyntax.ml  Uncurry.ml  dune
src/lang/base/codegen/: MonomorphicSyntax.ml  dune
src/lang/codegen/: AnnotationExplicitizer.ml  ClosureConversion.ml  ClosuredSyntax.ml  CodegenUtils.ml  CodegenUtils.mli  DCE.ml  ExplicitAnnotationSyntax.ml  FlatPatternSyntax.ml  FlattenPatterns.ml  GenLlvm.ml  MonomorphicSyntax.ml  Monomorphize.ml  ScopingRename.ml  TypeLLConv.ml  UncurriedSyntax.ml  Uncurry.ml  dune
src/llvmgen/: DebugInfo.ml  GasChargeGen.ml  GenLlvm.ml  GenSrtlDecls.ml  LLGenUtils.ml  LLGenUtils.mli  SRTL.ml  TypeLLConv.ml  TypeLLConv.mli  dune  dune~
src/mock_stdlib/: BoolUtils.scillib  IntUtils.scillib  ListUtils.scillib  NatUtils.scillib  PairUtils.scillib
src/runners/: cli.ml  dune  expr_compiler.ml  expr_llvm.ml  scilla_compiler.ml  scilla_llvm.ml  scilla_llvm_common.ml  scilla_llvm_server.ml
src/stdlib/: dune
src/utils/: ExprLlvmUtils.ml  ScillaLlvmUtils.ml  dune
tests/: Testsuite.ml  dune
tests/checker/bad/gold/: bad_fields3.scilla.gold
tests/codegen/: fun-type-inst.scilla
tests/codegen/contr/: MmphTest.scilla  TestCodegenContr.ml  accept.scilla  cconstraint.scilla  dune  event.scilla  helloWorld.scilla  libeval_tapp.scilla  map_misc.scilla  match_assign.scilla  match_assign2.scilla  match_assign3.scilla  name_clash1.scilla  name_clash2.scilla  pm-empty.scilla  pm1.scilla  pm2.scilla  pm3.scilla  pm4.scilla  pm5.scilla  pm6.scilla  pm7.scilla  send.scilla  simple-iterate.scilla  simple-map.scilla  throw.scilla  uncurry1.scilla  uncurry2.scilla  uncurry3.scilla  uncurry4.scilla
tests/codegen/contr/dgold/: MmphTest.scilla.gold  accept.scilla.gold  accounting_tests.scilla.gold  accounting_tests_support.scilla.gold  crowdfunding.scilla.gold  ecdsa.scilla.gold  event.scilla.gold  helloWorld.scilla.gold  libeval_tapp.scilla.gold  map_corners_test.scilla.gold  map_misc.scilla.gold  match_assign.scilla.gold  match_assign2.scilla.gold  match_assign3.scilla.gold  name_clash1.scilla.gold  name_clash2.scilla.gold  pm-empty.scilla.gold  pm1.scilla.gold  pm2.scilla.gold  pm3.scilla.gold  pm4.scilla.gold  pm5.scilla.gold  pm6.scilla.gold  pm7.scilla.gold  remote_state_reads.scilla.gold  remote_state_reads_2.scilla.gold  replicate.scilla.gold  send.scilla.gold  simple-iterate.scilla.gold  simple-map.scilla.gold  throw.scilla.gold  type_casts.scilla.gold  ud-proxy.scilla.gold  ud-registry.scilla.gold  uncurry1.scilla.gold  uncurry2.scilla.gold  uncurry3.scilla.gold  uncurry4.scilla.gold
tests/codegen/contr/gold/: MmphTest.scilla.gold  accept.scilla.gold  accounting_tests.scilla.gold  accounting_tests_support.scilla.gold  crowdfunding.scilla.gold  ecdsa.scilla.gold  event.scilla.gold  helloWorld.scilla.gold  libeval_tapp.scilla.gold  map_corners_test.scilla.gold  map_misc.scilla.gold  match_assign.scilla.gold  match_assign2.scilla.gold  match_assign3.scilla.gold  name_clash1.scilla.gold  name_clash2.scilla.gold  pm-empty.scilla.gold  pm1.scilla.gold  pm2.scilla.gold  pm3.scilla.gold  pm4.scilla.gold  pm5.scilla.gold  pm6.scilla.gold  pm7.scilla.gold  remote_state_reads.scilla.gold  remote_state_reads_2.scilla.gold  replicate.scilla.gold  send.scilla.gold  simple-iterate.scilla.gold  simple-map.scilla.gold  throw.scilla.gold  type_casts.scilla.gold  ud-proxy.scilla.gold  ud-registry.scilla.gold  uncurry1.scilla.gold  uncurry2.scilla.gold  uncurry3.scilla.gold  uncurry4.scilla.gold
tests/codegen/expr/: TestCodegenExpr.ml  ackermann.scilexp  ackermann_3_7.scilexp  adt-fun.scilexp  builtin-isqrt.scilexp  builtin-pow.scilexp  builtin-schnorr_get_address.scilexp  builtin_add_int256.scilexp  builtin_add_int32.scilexp  builtin_add_uint256.scilexp  builtin_add_uint32.scilexp  builtin_baddsub.scilexp  builtin_bech32-invalid.scilexp  builtin_bech32.scilexp  builtin_concat.scilexp  builtin_div_rem.scilexp  builtin_ecdsa_verify_false.scilexp  builtin_ecdsa_verify_true.scilexp  builtin_eq.scilexp  builtin_keccak256hash.scilexp  builtin_lt.scilexp  builtin_map.scilexp  builtin_mul.scilexp  builtin_overflow1.scilexp  builtin_overflow2.scilexp  builtin_overflow3.scilexp  builtin_overflow4.scilexp  builtin_overflow5.scilexp  builtin_overflow6.scilexp  builtin_ripemd160hash.scilexp  builtin_schnorr_verify_false.scilexp  builtin_schnorr_verify_true.scilexp  builtin_sha256hash.scilexp  builtin_strlen.scilexp  builtin_strrev.scilexp  builtin_sub.scilexp  builtin_substr.scilexp  builtin_substr_rfail.scilexp  builtin_to_ascii.scilexp  builtin_to_ascii_error.scilexp  (+71 more)
tests/codegen/expr/dgold/: ackermann.scilexp.gold  ackermann_3_7.scilexp.gold  adt-fun.scilexp.gold  builtin-ecdsa_recover.scilexp.gold  builtin-isqrt.scilexp.gold  builtin-pow.scilexp.gold  builtin-schnorr_get_address.scilexp.gold  builtin_add_int256.scilexp.gold  (+97 more)
tests/codegen/utils/: Utils.ml  dune
(+117 files in other folders)
