opam-version: "2.0"
maintainer: "vaivaswatha@zilliqa.com"
authors: ["Zilliqa Research Pvt. Ltd."]
homepage: "https://scilla-lang.org"
bug-reports: "https://github.com/Zilliqa/scilla-compiler/issues"
dev-repo: "git+https://github.com/Zilliqa/scilla-compiler.git"
license: "GPL-3.0"
depends: [
  "scilla"
  "llvm" {>= "10.0.0" & < "10.1~" }
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
synopsis: "Scilla Compiler"
description: """
The scilla LLVM compiler translates Scilla contracts to LLVM-IR for execution
on the Scilla Virtual Machine.
"""
