opam-version: "2.0"
maintainer: "vaivaswatha@zilliqa.com"
authors: ["Zilliqa Research Pvt. Ltd."]
homepage: "https://scilla-lang.org"
bug-reports: "https://github.com/Zilliqa/scilla-compiler/issues"
dev-repo: "git+https://github.com/Zilliqa/scilla-compiler.git"
license: "GPL-3.0"
depends: [
  "ocamlfind"
  "batteries"
  "core" {>= "v0.15.0" & < "v0.16.0~"}
  "core_unix" {>= "v0.15.0" & < "v0.16.0~"}
  "scilla"
  "llvm" {>= "13.0.0" & < "13.1~"}
]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
synopsis: "Scilla Compiler"
description: """
The scilla LLVM compiler translates Scilla contracts to LLVM-IR for execution
on the Scilla Virtual Machine.
"""
