(library
 (name scilla_codegen)
  (wrapped false)
  (libraries core
              ppx_sexp_conv
              angstrom stdint llvm
              ppx_deriving batteries
              ppx_let scilla_base)
  (preprocess (pps 
               ppx_let
               bisect_ppx -conditional
               ppx_sexp_conv
               ppx_deriving.show))
  (synopsis "Scilla LLVM-IR codegen"))
