(library
 (name scilla_codegen)
 (wrapped false)
 (libraries core ppx_sexp_conv angstrom stdint llvm llvm.analysis llvm.target
   llvm_X86 llvm.scalar_opts llvm.ipo ppx_deriving ppx_let scilla.base)
 (preprocess
  (pps ppx_let bisect_ppx --conditional ppx_sexp_conv ppx_deriving.show
    ppx_compare))
 (synopsis "Scilla LLVM-IR codegen"))
