(library
 (name scilla_llvmgen)
 (wrapped false)
 (libraries core ppx_sexp_conv angstrom stdint llvm llvm.analysis llvm.target
    llvm.all_backends llvm.scalar_opts llvm.ipo llvm.debuginfo ppx_deriving ppx_let
   scilla.base scilla_astlowering)
 (preprocess
  (pps ppx_let bisect_ppx --conditional ppx_sexp_conv ppx_deriving.show
    ppx_compare))
 (synopsis "Scilla LLVM-IR codegen"))
