(executables
 (names scilla_runner eval_runner type_checker scilla_checker scilla_server
   scilla_compiler expr_compiler)
 (public_names scilla-runner eval-runner type-checker scilla-checker
   scilla-server scilla-compiler expr-compiler)
 (package scilla)
 (modules scilla_runner eval_runner type_checker scilla_checker scilla_server
   scilla_compiler expr_compiler)
 (libraries core angstrom yojson cryptokit fileutils scilla_base scilla_eval
   scilla_server_lib scilla_crypto scilla_codegen)
 (modes byte native)
 (preprocess
  (pps ppx_sexp_conv ppx_let ppx_deriving.show bisect_ppx --conditional)))
