(executables
 (names scilla_llvm expr_llvm scilla_llvm_server)
 (public_names scilla-llvm expr-llvm scilla-server)
 (package scilla-compiler)
 (modules scilla_llvm_common scilla_llvm expr_llvm cli scilla_llvm_server)
 (libraries core core_unix.command_unix scilla.base scilla.server_lib scilla_astlowering
   scilla_llvmgen llvm.bitwriter)
 (modes byte native)
 (preprocess
  (pps ppx_sexp_conv ppx_let ppx_deriving_rpc ppx_deriving.show bisect_ppx
    --conditional)))
